Skins/UniversityCollege/skin.css
/* ... */
table.evt td {
  font-family: Arial, Helvetica, sans-serif;
}
table.evt td.evtDayHeader {
  padding: 8px 0;
  background: transparent;
  border: none;
  text-align: center;
  font-weight: bold;
  font-size: 9pt;
  color: #787676;
}
table.evt td.evtDay {
  color: #787676;
  border: 1px solid #cfcfcf;
  height: 115px;
  padding: 3px 0 0 5px;
  font-size: 10pt;
  background: rgba(0, 0, 0, 0.04);
}
table.evt td.evtDay > a {
  padding: 2px 0 0 5px;
  text-decoration: none;
  font-size: 9pt;
}
table.evt td.evtWeekendDay {
  background: rgba(0, 0, 0, 0.04) !important;
  background-color: #ececec;
}
table.evt td.evtDayScroll {
  padding: 0;
  font-weight: normal;
  text-decoration: none;
}
table.evt td.evtDayScroll a {
  font-size: 10pt;
}
table.evt td.evtDayScroll a:hover {
  text-decoration: underline;
}
table.evt td.evtSelDay {
  background: transparent;
  outline: 1px solid maroon;
}

span.evtTitle {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: 10pt;
  color: #444;
}

.evtBar {
  width: 100%;
  height: auto;
  position: relative;
  z-index: 1;
}
.evtBar .evtbarBtn {
  padding: 0;
}
.evtBar a {
  height: 27px;
  display: block;
}
.evtBar a.btnTop {
  width: 63px;
  position: absolute;
  left: 0px;
  background: url("img/cal-today.png") bottom left no-repeat;
}
.evtBar a.btnTop:hover {
  background-position: top left;
}
.evtBar a.cal-month, .evtBar a.cal-agenda, .evtBar a.cal-week, .evtBar a.cal-day {
  float: left;
}
.evtBar a.cal-month:hover, .evtBar a.cal-agenda:hover, .evtBar a.cal-week:hover, .evtBar a.cal-day:hover {
  background-position: bottom left;
}
.evtBar a.cal-month, .evtBar a.cal-day {
  width: 63px;
}
.evtBar a.cal-agenda, .evtBar a.cal-week {
  width: 62px;
}
.evtBar a.cal-month {
  background: url("img/cal-month.png") top left no-repeat;
}
.evtBar a.cal-agenda {
  background: url("img/cal-agenda.png") top left no-repeat;
}
.evtBar a.cal-week {
  background: url("img/cal-week.png") top left no-repeat;
}
.evtBar a.cal-day {
  background: url("img/cal-day.png") top left no-repeat;
}

table.rcTable td a.rcCalPopup {
  margin-top: 2px;
}

table.dvTable {
  margin: 0 auto;
  border: 1px #d2d2d2 solid;
  border-collapse: collapse;
}
table.dvTable td.dvAllDay, table.dvTable td.dvEvent {
  background: #ddd;
  border: none;
}
table.dvTable td.dvTime, table.dvTable td.dvTime2 {
  border-right: 1px #d2d2d2 solid;
}
table.dvTable td.dvTime2 {
  border-bottom: 1px #d2d2d2 solid;
}
table.dvTable td.dvEvent {
  padding-left: 10px;
}
table.dvTable td.dvNoEvent {
  border-bottom: 1px #d2d2d2 solid !important;
}
table.dvTable td div.pop {
  font-size: 12px;
}

div.wvHeader {
  margin-top: 25px;
  margin-bottom: 5px;
  color: #6a6a6a;
}

/** 
 * -------------------------------------------
 * FAQ Styles
 * -------------------------------------------
 **/
.faq-question {
  width: 100%;
  padding: 5px 0 5px 5px;
  background-color: #E0E0E0;
  font-size: 9pt;
  font-weight: bold;
  color: #444;
}
.faq-question p {
  display: inline;
}

.faq-answer {
  width: 100%;
  margin-top: 10px;
  padding-left: 5px;
}
.faq-answer strong {
  display: block;
  font-weight: bold;
}

/*******************************
folio rotator css
*******************************/
.iupui-template-wrap, .uc-folio-rotator {
    overflow: hidden;
    width: 952px;
    height: 452px;
    position:relative;
}

#dnn_BannerPane .iupui-template-wrap .rotator-footer, #dnn_BannerPane .uc-folio-rotator .rotator-footer {
    position:absolute;
    bottom: 0px;
    z-index: 999;
    width: 952px;
    height: 30px;
    /*padding: 0 10px 0 0;*/
}
div.uc-folio-rotator div.rotator-footer {
  position: absolute;
	bottom: 0px;
	z-index: 999;
	width: 952px;
	height: auto !important;
	/*padding: 0 10px 0 0;*/
	background-image: url('img/rotate/80.png');
	background-repeat: repeat;
	/*padding: 10px 10px 10px 20px !important;*/
	color: #F8F3D2;
}

.uc-folio-rotator .title h1 {
	font: bold 13pt/9pt "Trebuchet MS", Arial, sans-serif;
}

.iupui-template-wrap .pagers, .uc-folio-rotator .pagers {
    float: right;
}
.iupui-template-wrap .pagers a, .uc-folio-rotator .pagers a {
	padding: 0;
	margin: 0 0 0 0;
	background: url('images/stagnate.png') no-repeat;
	color: transparent;
	display: inline-block;
	text-indent: -9999px;
	width: 7px;
}
.iupui-template-wrap .pagers a.activeSlide, .uc-folio-rotator .pagers a.activeSlide {
    background: url('images/selected.png') no-repeat;
}
.iupui-template-wrap .pagers .rotator-pager {
    margin: 8px 6px 0 0;
}
.uc-folio-rotator .pagers .rotator-pager {
	margin: 0;
}

#dnn_BannerPane{
position: relative;
border: 4px solid #f8f3d2;
width: 952px;
height: 452px;
outline: 1px solid #7d110c;}

div.desc a {
	color: #f8f3d2;
	text-decoration: underline;
}

div.desc span.noLinkUnder a{
    text-decoration:none;
}

div.title-desc-container {
	padding: 15px;
}
div.title-desc-container  div.title h1 {
	padding-bottom: 14px;
}

/*end folio*/

/*Content Pane Action Menu Fix*/
#dnn_ContentPane .c_footer{
    padding-bottom:20px;
}

#dnn_ContentPane .interior-body-type{
    float:none;
}

/*End Content Pane Action Menu Fix*/

/*------------------------------------------
			CALL TO ACTION BUTTON
--------------------------------------------*/
a.button {
	/*padding:8px;
	background-color: #7D1416;
	border: none;
	display:inline-block;

	color: white;
	text-align: center;
	font: 18px "benton";
	text-decoration:none;*/
	margin:0px 5px;
	padding: 10px 20px;
	border-radius: 4px;
	text-align: center;
	text-decoration: none;
	color: #fff;
	background: none repeat scroll 0% 0% #A90533;
}

/* ON HOVER */

a.button:hover {
	/*background:#456A7D;
	color:white;*/
	background:rgb(219,55,101);
}

/*------------------------------------------
			END OF BUTTON
--------------------------------------------*/

/*----------- THIS IS THE UC FACULTY TABLE PARAMETERS-------- */
#theuctable {width:100%;}

/*SEARCH BAR */

#uc_search_Bar {float:left; 
padding-top:18px;}
/* ... */

